- Refonte d'une partie du code CSS - Continuation de la partie Forum

--- a/views/base_dashboard.html
+++ b/views/base_dashboard.html
@@ -3,6 +3,8 @@
   <head>
     <title>Testify Dashboard - {% block title %}{% endblock %}</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="/appsy_project/styles/testify_dashboard.css">
     <link rel="stylesheet" href="/appsy_project/vendor/noty/noty.css">
     <link rel="stylesheet" href="/appsy_project/vendor/noty/themes/metroui.css">
@@ -51,9 +53,9 @@
         </div>
 
         <div class="nav-element nav-bottom" id="chat-nav">
-          <a href="/appsy_project/dashboard/forums">
+          <a href="/appsy_project/dashboard/forum">
             <i class="fas fa-comments"></i>
-            Forums
+            Forum
           </a>
         </div>
         <div class="nav-element" id="chat-nav">
