--- a/views/base_home.html
+++ b/views/base_home.html
@@ -3,6 +3,8 @@
   <head>
     <title>Testify - {% block title %}{% endblock %}</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="/appsy_project/styles/testify.css">
     <link rel="stylesheet" href="/appsy_project/vendor/noty/noty.css">
     <link rel="stylesheet" href="/appsy_project/vendor/noty/themes/metroui.css">
