--- a/views/home/connexion.html
+++ b/views/home/connexion.html
@@ -12,10 +12,10 @@ Connexion
 
 <section>
   <div class="container">
-    <div class="row text-center">
+    <div class="row justify-content-center">
       <h2>Connexion</h2>
     </div>
-    <div class="row">
+    <div class="row justify-content-center">
       <form class="form text-center">
         <div>
           <input type="email" class="form-field" name="email" id="email" placeholder="Votre email">
