--- a/views/home/home.html
+++ b/views/home/home.html
@@ -21,66 +21,63 @@ Découvrir Testify
   </ul>
 </div>
 
+<div class="container-fluid">
 
-
-<section id="product">
-  <div class="container">
-    <div class="col-6">
-      <img src="/appsy_project/images/logo_testify.png" width="300px">
+  <section id="product">
+    <div class="row">
+      <div class="col-6 d-flex justify-content-end">
+        <img src="/appsy_project/images/logo_testify.png" width="300px">
+      </div>
+      <div class="col-6">
+        <h3>Testify</h3>
+        <p>Description du produit</p>
+        <p> Nam ut justo eget quam aliquam bibendum nec et erat. Praesent aliquet justo at eros pellentesque sollicitudin.
+          Proin pharetra scelerisque tempus. Phasellus consequat, elit semper finibus fringilla, enim urna scelerisque sapien, nec aliquet
+          ligula eros id libero. Nullam ut gravida quam, sit amet commodo quam. Donec egestas tortor vel lorem vulputate, ut vulputate nisi blandit.
+          Sed commodo varius augue eget fringilla. Nam ut justo eget quam aliquam bibendum nec et erat. Nam ut justo eget quam aliquam bibendum nec et erat.
+          Nam ut justo eget quam aliquam bibendum nec et erat.
+        </p>
+      </div>
     </div>
-    <div class="col-6">
-      <h3>Testify</h3>
-      <p>Description du produit</p>
-      <p> Nam ut justo eget quam aliquam bibendum nec et erat. Praesent aliquet justo at eros pellentesque sollicitudin.
-        Proin pharetra scelerisque tempus. Phasellus consequat, elit semper finibus fringilla, enim urna scelerisque sapien, nec aliquet
-        ligula eros id libero. Nullam ut gravida quam, sit amet commodo quam. Donec egestas tortor vel lorem vulputate, ut vulputate nisi blandit.
-        Sed commodo varius augue eget fringilla. Nam ut justo eget quam aliquam bibendum nec et erat. Nam ut justo eget quam aliquam bibendum nec et erat.
-        Nam ut justo eget quam aliquam bibendum nec et erat.
-      </p>
+  </section>
+
+  <section id="offers" class="bg-grey">
+    <div class="row">
+      <div class="col-6">
+        <h3>Nos offres</h3>
+        <p>Achat définitif X€</p>
+        <p>Mise à jour X€</p>
+        <p>Location</p>
+      </div>
+      <div class="col-6">
+        <table>
+          <tr>
+            <th>Temps</th>
+            <th>Prix</th>
+            <th>Prix par mois</th>
+          </tr>
+          <tr>
+            <td>1 ans</td>
+            <td>X€</td>
+            <td>X€</td>
+          </tr>
+          <tr>
+            <td>3 ans</td>
+            <td>X€</td>
+            <td>X€</td>
+          </tr>
+          <tr>
+            <td>5 ans</td>
+            <td>X€</td>
+            <td>X€</td>
+          </tr>
+        </table>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
-
-<section id="offers" class="bg-grey">
-  <div class="container">
-    <div class="col-6">
-      <h3>Nos offres</h3>
-      <p>Achat définitif X€</p>
-      <p>Mise à jour X€</p>
-      <p>Location</p>
-    </div>
-    <div class="col-6">
-      <table>
-        <tr>
-          <th>Temps</th>
-          <th>Prix</th>
-          <th>Prix par mois</th>
-        </tr>
-        <tr>
-          <td>1 ans</td>
-          <td>X€</td>
-          <td>X€</td>
-        </tr>
-        <tr>
-          <td>3 ans</td>
-          <td>X€</td>
-          <td>X€</td>
-        </tr>
-        <tr>
-          <td>5 ans</td>
-          <td>X€</td>
-          <td>X€</td>
-        </tr>
-      </table>
-    </div>
-  </div>
-</section>
-
-
-<section id="clients">
-  <div class="container">
-    <div class="col-6">
+  <section id="clients">
+    <div class="col-6 d-flex justify-content-end">
       <img src="/appsy_project/images/logo_appsy.png" height="250px">
     </div>
     <div class="col-6">
@@ -95,12 +92,9 @@ Découvrir Testify
         Nam ut justo eget quam aliquam bibendum nec et erat.
       </p>
     </div>
-  </div>
-</section>
+  </section>
 
-
-<section id="review" class="bg-grey">
-  <div class="container">
+  <section id="review" class="bg-grey">
     <div class="col-6">
       <h3>On en parle</h3>
       <p>Titres articles :
@@ -115,13 +109,10 @@ Découvrir Testify
     <div class="col-6">
       <img src="/appsy_project/images/logo_appsy.png" height="250px">
     </div>
-  </div>
-</section>
+  </section>
 
-
-<section id="client">
-  <div class="container">
-    <div class="col-6">
+  <section id="client">
+    <div class="col-6 d-flex justify-content-end">
       <img src="/appsy_project/images/Infinite_measures.png" height="250px">
     </div>
     <div class="col-6">
@@ -134,7 +125,8 @@ Découvrir Testify
         Nam ut justo eget quam aliquam bibendum nec et erat.
       </p>
     </div>
-  </div>
-</section>
+  </section>
+
+</div>
 
 {% endblock %}
