--- a/views/home/inscription.html
+++ b/views/home/inscription.html
@@ -12,10 +12,10 @@ Inscription
 
 <section>
   <div class="container">
-    <div class="row text-center">
+    <div class="row justify-content-center">
       <h2>Inscription</h2>
     </div>
-    <div class="row text-center">
+    <div class="row justify-content-center">
       <form class="form">
 
         <div>
