--- a/public/styles/testify.css
+++ b/public/styles/testify.css
@@ -1,3 +1,4 @@
+@import 'bootstrap-like.css';
 @import 'buttons.css';
 @import 'form.css';
 
@@ -100,21 +101,6 @@ section {
   padding-bottom: 40px;
 }
 
-.container {
-  width: 1170px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.col-6 {
-  position: relative;
-  width: 50%;
-  float: left;
-  min-height: 1px;
-  padding-right: 15px;
-  padding-left: 15px;
-}
-
 .bg-grey {
   background-color: #f7f7f9;
 }
@@ -145,17 +131,4 @@ footer {
 
 footer a {
   color: inherit;
-}
-
-.h-100 {
-  height: 100%;
-}
-
-.my-auto {
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
-.text-center {
-  text-align: center;
 }
