--- a/public/styles/testify_dashboard.css
+++ b/public/styles/testify_dashboard.css
@@ -1,3 +1,4 @@
+@import 'bootstrap-like.css';
 @import 'buttons.css';
 @import 'form.css';
 
@@ -31,6 +32,7 @@ body {
   overflow-x: hidden;
   padding-top: 20px;
   display: flex;
+  flex: auto;
   flex-direction: column;
   align-items: center;
 }
@@ -101,21 +103,6 @@ section {
   padding-bottom: 40px;
 }
 
-.container {
-  width: 1170px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.col-6 {
-  position: relative;
-  width: 50%;
-  float: left;
-  min-height: 1px;
-  padding-right: 15px;
-  padding-left: 15px;
-}
-
 .bg-grey {
   background-color: #f7f7f9;
 }
@@ -139,24 +126,6 @@ footer p {
   color: inherit;
 }
 
-.h-100 {
-  height: 100%;
-}
-
-.my-auto {
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.text-center {
-  text-align: center;
-}
-
 .contact > span {
   white-space: nowrap;
   overflow: hidden;
@@ -166,13 +135,11 @@ footer p {
 .message {
   border: 2px solid #004576;
   color: white;
-  width: 50%;
   margin-bottom: 5px;
   padding-left: 10px;
 }
 
 .msgMe {
-  margin-left: auto;
   border-radius: 13px 13px 0 13px;
   background-color: #0060a5;
 }
@@ -182,12 +149,16 @@ footer p {
   background-color: #004e86;
 }
 
+#messages {
+  bottom: 150px;
+}
+
 .msgZone {
-  width: 100%;
   position: fixed;
-  left: 160px;
   bottom: 0;
-  right: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
   background-color: #004e86;
   display: flex;
   align-items: center;
