--- a/views/404.html
+++ b/views/404.html
@@ -3,24 +3,22 @@
   <head>
     <title>Testify - Page introuvable</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="/appsy_project/styles/testify.css">
     <link rel="stylesheet" href="/appsy_project/vendor/fontawesome/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
   </head>
-  <body class="h-100">
+  <body>
 
-    <section class="h-100 my-auto">
-      <div class="container">
-        <div class="row">
-          <h1 style="text-align: center; font-size: 5em">404</h1>
-          <h1 style="text-align: center">Oops, la page n'a pas été trouvée !</h1>
-          <h2 style="text-align: center">
-            La page que vous cherchez n'existe pas ou plus. Revenez en arrière ou
-            <a href="/appsy_project">revenez à l'accueil</a>
-        </h2>
-        </div>
-      </div>
-    </section>
+    <div class="container-fluid">
+      <h1 style="text-align: center; font-size: 5em">404</h1>
+      <h1 style="text-align: center">Oops, la page n'a pas été trouvée !</h1>
+      <h2 style="text-align: center">
+        La page que vous cherchez n'existe pas ou plus. Revenez en arrière ou
+        <a href="/appsy_project">revenez à l'accueil</a>
+      </h2>
+    </div>
 
     <footer>
       <p>
