--- a/views/dashboard/chat.html
+++ b/views/dashboard/chat.html
@@ -14,48 +14,46 @@ Messagerie
 
 {% block body %}
 
-<section>
-  <div class="container">
-    <div class="row text-center">
-      <h2>Messagerie - Vos discussions</h2>
-    </div>
-    <div class="row text-center" id="contacts"></div>
-    <div class="row text-center" id="contacts-wait">
-      <i class="fas fa-circle-notch fa-spin fa-2x"></i>
-    </div>
-    <div class="row text-center paginator" id="contact-pagination"></div>
-
-    <div class="row text-center" id="nocontact" style="display: none">
-      <h3>Vous n'avez pas encore de discussion !</h3>
-    </div>
-
-    <div class="row">
-      <h2 class="text-center">Trouver un contact</h2>
-    </div>
-    <div class="row text-center">
-      <form class="form">
-        <input type="text" class="form-field" name="contact-search" id="contact-search" placeholder="Ex: John Doe">
-        <button id="btn-search" type="button" class="btn btn-primary">
-          Chercher <i id="wait-searching" class="fas fa-circle-notch fa-spin" style="display: none"></i>
-        </button>
-      </form>
-    </div>
-    <div class="row" id="contact-list-row" style="display: none">
-      <table class="mx-auto">
-        <thead>
-          <tr>
-            <th>Nom / Prénom</th>
-            <th>Email</th>
-            <th>Role</th>
-            <th>Action</th>
-          </tr>
-        </thead>
-        <tbody id="contact-list">
-        </tbody>
-      </table>
-    </div>
+<div class="container">
+  <div class="row justify-content-center">
+    <h2>Messagerie - Vos discussions</h2>
   </div>
-</section>
+  <div class="row flex-column justify-content-center" id="contacts"></div>
+  <div class="row justify-content-center" id="contacts-wait">
+    <i class="fas fa-circle-notch fa-spin fa-2x"></i>
+  </div>
+  <div class="row justify-content-center paginator" id="contact-pagination"></div>
+
+  <div class="row justify-content-center" id="nocontact" style="display: none">
+    <h3>Vous n'avez pas encore de discussion !</h3>
+  </div>
+
+  <div class="row justify-content-center">
+    <h2>Trouver un contact</h2>
+  </div>
+  <div class="row justify-content-center">
+    <form class="form">
+      <input type="text" class="form-field" name="contact-search" id="contact-search" placeholder="Ex: John Doe">
+      <button id="btn-search" type="button" class="btn btn-primary">
+        Chercher <i id="wait-searching" class="fas fa-circle-notch fa-spin" style="display: none"></i>
+      </button>
+    </form>
+  </div>
+  <div class="row justify-content-center" id="contact-list-row" style="display: none">
+    <table class="mx-auto">
+      <thead>
+        <tr>
+          <th>Nom / Prénom</th>
+          <th>Email</th>
+          <th>Role</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody id="contact-list">
+      </tbody>
+    </table>
+  </div>
+</div>
 
 {% endblock %}
 
@@ -77,7 +75,10 @@ Messagerie
     });
 
     window.onpopstate = function(event) {
-      getUserContacts(event.state.page, contactPageSize, paginatorContacts);
+      var page = 1;
+      if (event.state !== null)
+        page = event.state.page;
+      getUserContacts(page, contactPageSize, paginatorContacts);
     };
 
     getUserContacts(page, contactPageSize, paginatorContacts);
