--- a/views/dashboard/chat_user.html
+++ b/views/dashboard/chat_user.html
@@ -10,28 +10,25 @@ Discussion
 
 {% block body %}
 
-<section>
-  <div class="container">
-    <div class="row text-center">
-      <h2>Discussion - <span id="contact"></span></h2>
-    </div>
-    <div class="row text-center" id="messages-wait">
-      <i class="fas fa-circle-notch fa-spin fa-2x"></i>
-    </div>
-    <div class="row text-center" id="nomessage" style="display: none">
-      <h3>Vous n'avez pas encore de conversation !</h3>
-    </div>
-    <div class="row" id="messages">
-    </div>
-
-    <div class="row msgZone">
-      <textarea id="text-message" placeholder="Message"></textarea>
-      <button type="button" class="btn btn-primary" id="btn-send-message">
-        Envoyer <i id="wait-send-message" class="fas fa-circle-notch fa-spin" style="display: none"></i>
-      </button>
-    </div>
+<div class="container-fluid" style="padding-bottom: 60px;">
+  <div class="row justify-content-center">
+    <h2>Discussion - <span id="contact"></span></h2>
   </div>
-</section>
+  <div class="row justify-content-center" id="messages-wait">
+    <i class="fas fa-circle-notch fa-spin fa-2x"></i>
+  </div>
+  <div class="row justify-content-center" id="nomessage" style="display: none">
+    <h3>Vous n'avez pas encore de conversation !</h3>
+  </div>
+  <div id="messages">
+  </div>
+</div>
+<div class="msgZone">
+  <textarea id="text-message" placeholder="Message"></textarea>
+  <button type="button" class="btn btn-primary" id="btn-send-message">
+    Envoyer <i id="wait-send-message" class="fas fa-circle-notch fa-spin" style="display: none"></i>
+  </button>
+</div>
 
 {% endblock %}
 
