--- a/views/dashboard/home.html
+++ b/views/dashboard/home.html
@@ -10,12 +10,10 @@ Accueil
 
 {% block body %}
 
-<section>
-  <div class="container">
-    <div class="row text-center">
-      <h2>Dashboard</h2>
-    </div>
+<div class="container">
+  <div class="row justify-content-center">
+    <h2>Dashboard</h2>
   </div>
-</section>
+</div>
 
 {% endblock %}
