Changement du fonctionnement du routing pour ne plus partir du principe que le site est distribué par "appsy_project"

--- a/views/404.html
+++ b/views/404.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="/appsy_project/styles/testify.css">
-    <link rel="stylesheet" href="/appsy_project/vendor/fontawesome/all.min.css">
+    <link rel="stylesheet" href="/styles/testify.css">
+    <link rel="stylesheet" href="/vendor/fontawesome/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
   </head>
   <body>
@@ -16,13 +16,13 @@
       <h1 style="text-align: center">Oops, la page n'a pas été trouvée !</h1>
       <h2 style="text-align: center">
         La page que vous cherchez n'existe pas ou plus. Revenez en arrière ou
-        <a href="/appsy_project">revenez à l'accueil</a>
+        <a href="/">revenez à l'accueil</a>
       </h2>
     </div>
 
     <footer>
       <p>
-        <a href="conditions_generales_de_ventes.html">Conditions générales de ventes</a> &#xa9; 2019, Testify.fr Powered by our own skills
+        <a href="/conditions_generales_de_ventes">Conditions générales de ventes</a> &#xa9; 2019, Testify.fr Powered by our own skills
       </p>
     </footer>
   </body>
