--- a/views/dashboard/chat.html
+++ b/views/dashboard/chat.html
@@ -9,7 +9,7 @@ Messagerie
 {% endblock %}
 
 {% block styles %}
-<link rel="stylesheet" href="/appsy_project/styles/paginator.css">
+<link rel="stylesheet" href="/styles/paginator.css">
 {% endblock %}
 
 {% block body %}
@@ -59,7 +59,7 @@ Messagerie
 
 {% block scripts %}
 
-<script type="text/javascript" src="/appsy_project/scripts/paginator.js" ></script>
+<script type="text/javascript" src="/scripts/paginator.js" ></script>
 
 <script type="text/javascript">
   $(function() {
