--- a/views/home/home.html
+++ b/views/home/home.html
@@ -26,7 +26,7 @@ Découvrir Testify
   <section id="product">
     <div class="row">
       <div class="col-6 d-flex justify-content-end">
-        <img src="/appsy_project/images/logo_testify.png" width="300px">
+        <img src="/images/logo_testify.png" width="300px">
       </div>
       <div class="col-6">
         <h3>Testify</h3>
@@ -78,7 +78,7 @@ Découvrir Testify
 
   <section id="clients">
     <div class="col-6 d-flex justify-content-end">
-      <img src="/appsy_project/images/logo_appsy.png" height="250px">
+      <img src="/images/logo_appsy.png" height="250px">
     </div>
     <div class="col-6">
       <h3>Nos clients</h3>
@@ -107,13 +107,13 @@ Découvrir Testify
       </p>
     </div>
     <div class="col-6">
-      <img src="/appsy_project/images/logo_appsy.png" height="250px">
+      <img src="/images/logo_appsy.png" height="250px">
     </div>
   </section>
 
   <section id="client">
     <div class="col-6 d-flex justify-content-end">
-      <img src="/appsy_project/images/Infinite_measures.png" height="250px">
+      <img src="/images/Infinite_measures.png" height="250px">
     </div>
     <div class="col-6">
       <h3>Infinite Measures</h3>
