--- a/views/base_dashboard.html
+++ b/views/base_dashboard.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="/appsy_project/styles/testify_dashboard.css">
-    <link rel="stylesheet" href="/appsy_project/vendor/noty/noty.css">
-    <link rel="stylesheet" href="/appsy_project/vendor/noty/themes/metroui.css">
-    <link rel="stylesheet" href="/appsy_project/vendor/fontawesome/all.min.css">
+    <link rel="stylesheet" href="/styles/testify_dashboard.css">
+    <link rel="stylesheet" href="/vendor/noty/noty.css">
+    <link rel="stylesheet" href="/vendor/noty/themes/metroui.css">
+    <link rel="stylesheet" href="/vendor/fontawesome/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
 
     {% block styles %}
@@ -17,13 +17,13 @@
   <body>
 
     <nav class="side-nav">
-      <a href="/appsy_project/dashboard">
-        <img src="/appsy_project/images/logo_testify.png" width="70px" height="70px">
+      <a href="dashboard">
+        <img src="/images/logo_testify.png" width="70px" height="70px">
       </a>
 
       <div class="nav-menu" id="home-nav">
         <div class="nav-element">
-          <a href="/appsy_project/dashboard">
+          <a href="/dashboard">
             <i class="fas fa-home"></i>
             Accueil
           </a>
@@ -34,32 +34,32 @@
           </a>
         </div>
         <div class="nav-element" id="tests-nav" style="display: none">
-          <a href="/appsy_project/dashboard/tests">
+          <a href="/dashboard/tests">
             <i class="fas fa-tasks"></i>
             Tests
           </a>
         </div>
         <div class="nav-element" id="subjects-nav" style="display: none">
-          <a href="/appsy_project/dashboard/subjects">
+          <a href="/dashboard/subjects">
             <i class="fas fa-users"></i>
             Sujets
           </a>
         </div>
         <div class="nav-element" id="examiners-nav" style="display: none">
-          <a href="/appsy_project/dashboard/examiners">
+          <a href="/dashboard/examiners">
             <i class="fas fa-users-cog"></i>
             Examinateurs
           </a>
         </div>
 
         <div class="nav-element nav-bottom" id="chat-nav">
-          <a href="/appsy_project/dashboard/forum">
+          <a href="/dashboard/forum">
             <i class="fas fa-comments"></i>
             Forum
           </a>
         </div>
         <div class="nav-element" id="chat-nav">
-          <a href="/appsy_project/dashboard/chat">
+          <a href="/dashboard/chat">
             <i class="fas fa-comment-dots"></i>
             Messagerie
           </a>
@@ -82,9 +82,9 @@
 
     </div>
 
-    <script type="text/javascript" src="/appsy_project/vendor/jquery/jquery-3.4.1.min.js" ></script>
-    <script type="text/javascript" src="/appsy_project/vendor/noty/noty.min.js" ></script>
-    <script type="text/javascript" src="/appsy_project/scripts/dashboard.js" ></script>
+    <script type="text/javascript" src="/vendor/jquery/jquery-3.4.1.min.js" ></script>
+    <script type="text/javascript" src="/vendor/noty/noty.min.js" ></script>
+    <script type="text/javascript" src="/scripts/dashboard.js" ></script>
 
     {% block scripts %}
     {% endblock %}
