--- a/views/base_home.html
+++ b/views/base_home.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="/appsy_project/styles/testify.css">
-    <link rel="stylesheet" href="/appsy_project/vendor/noty/noty.css">
-    <link rel="stylesheet" href="/appsy_project/vendor/noty/themes/metroui.css">
-    <link rel="stylesheet" href="/appsy_project/vendor/fontawesome/all.min.css">
+    <link rel="stylesheet" href="/styles/testify.css">
+    <link rel="stylesheet" href="/vendor/noty/noty.css">
+    <link rel="stylesheet" href="/vendor/noty/themes/metroui.css">
+    <link rel="stylesheet" href="/vendor/fontawesome/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
 
     {% block styles %}
@@ -17,13 +17,13 @@
   <body>
 
     <nav class="header-nav">
-      <a href="/appsy_project">
-        <img src="/appsy_project/images/logo_testify.png" width="70px" height="70px" style="margin-left: 10px">
+      <a href="/">
+        <img src="/images/logo_testify.png" width="70px" height="70px" style="margin-left: 10px">
       </a>
       <h1>{% block navtitle %}{% endblock %}</h1>
       <ul class="btn-group-1">
-        <li><a href="inscription">Inscription</a></li>
-        <li><a href="connexion">Connexion</a></li>
+        <li><a href="/inscription">Inscription</a></li>
+        <li><a href="/connexion">Connexion</a></li>
       </ul>
     </nav>
 
@@ -32,14 +32,14 @@
 
     <footer>
       <p>
-        <a href="conditions_generales_de_ventes.html">Conditions générales de ventes</a> &#xa9; 2019, Testify.fr Powered by our own skills
+        <a href="/conditions_generales_de_ventes">Conditions générales de ventes</a> &#xa9; 2019, Testify.fr Powered by our own skills
       </p>
     </footer>
 
-    <script type="text/javascript" src="/appsy_project/vendor/jquery/jquery-3.4.1.min.js" ></script>
-    <script type="text/javascript" src="/appsy_project/vendor/noty/noty.min.js" ></script>
-    <script type="text/javascript" src="/appsy_project/scripts/main.js" ></script>
-    <script type="text/javascript" src="/appsy_project/scripts/scrolling.js" ></script>
+    <script type="text/javascript" src="/vendor/jquery/jquery-3.4.1.min.js" ></script>
+    <script type="text/javascript" src="/vendor/noty/noty.min.js" ></script>
+    <script type="text/javascript" src="/scripts/main.js" ></script>
+    <script type="text/javascript" src="/scripts/scrolling.js" ></script>
 
     {% block scripts %}
     {% endblock %}
