--- a/public/styles/bootstrap-like.css
+++ b/public/styles/bootstrap-like.css
@@ -263,6 +263,10 @@
   background-color: rgba(0, 0, 0, 0.4);
 }
 
+.modal-active {
+  display: block !important;
+}
+
 .modal-content {
   position: relative;
   background-color: #fefefe;
