--- a/public/styles/form.css
+++ b/public/styles/form.css
@@ -9,6 +9,16 @@
   padding: 10px 18px;
 }
 
+.col-form-label {
+  padding-top: calc(0.375rem + 1px);
+  padding-bottom: calc(0.375rem + 1px);
+}
+
+label {
+  display: inline-block;
+  margin-bottom: 0.5rem;
+}
+
 .btn {
   display: inline-block;
   background: transparent;
