- Framework: Implémentation d'une gestion d'un contexte à une vue HTML pour récupérer des valeurs du controlleur - Avancement sur la partie forum

--- a/public/styles/bootstrap-like.css
+++ b/public/styles/bootstrap-like.css
@@ -225,6 +225,10 @@
   justify-content: flex-end !important;
 }
 
+.align-items-center {
+  align-items: center;
+}
+
 @media (min-width: 576px) {
   .container {
     max-width: 540px;
