--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -13,8 +13,8 @@ Découvrir Testify
 <!--Boutons de la barre de navigation-->
 <div class="navigation">
   <ul class="btn-group-2">
-    <li><a href="#product">Notre produit</a></li>
-    <li><a href="#offers">Nos offres</a></li>
+    <li><a href="#product">{{ translate 'HOME_MENU_PRODUCT' }}</a></li>
+    <li><a href="#offers">{{ translate 'HOME_MENU_OFFERS' }}</a></li>
     <li><a href="#clients">Nos clients</a></li>
     <li><a href="#review">On en parle</a></li>
     <li><a href="#client">Infinite Measures</a></li>
