--- a/src/views/dashboard/home.html
+++ b/src/views/dashboard/home.html
@@ -1,11 +1,11 @@
 {% extends 'base_dashboard.html' %}
 
 {% block title %}
-Accueil
+{{ translate 'DASHBOARD_HOME_TITLE' }}
 {% endblock %}
 
 {% block navtitle %}
-Accueil
+{{ translate 'DASHBOARD_HOME_TITLE' }}
 {% endblock %}
 
 {% block body %}
